mod_admin_identity: typo in translation.
(cherry picked from commit 1dc5149afa0cba2121cdde1fc97f2b53a6ec1016)

--- a/modules/mod_admin_identity/translations/nl.po
+++ b/modules/mod_admin_identity/translations/nl.po
@@ -440,7 +440,7 @@ msgstr "Je adres is nu geverifieerd."
 
 #: modules/mod_admin_identity/templates/identity_verify.tpl:20
 msgid "Your e-mail address is now verified."
-msgstr "Je e-amiladres is nu geverifieerd."
+msgstr "Je e-mailadres is nu geverifieerd."
 
 #: modules/mod_admin_identity/templates/email_admin_new_user.tpl:4
 msgid "Your login details for"
