--- a/modules/mod_survey/translations/nl.po
+++ b/modules/mod_survey/translations/nl.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2013-07-16 19:53+0200\n"
+"PO-Revision-Date: 2015-03-04 16:58+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -48,7 +48,7 @@ msgstr ""
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:28
 msgid "April"
-msgstr "April"
+msgstr "april"
 
 #: modules/mod_survey/templates/_survey_question_page.tpl:32
 msgid "Are you sure you want to stop?"
@@ -56,7 +56,7 @@ msgstr "Weet je zeker dat je wilt stoppen?"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:32
 msgid "August"
-msgstr "Augustus"
+msgstr "augustus"
 
 #: modules/mod_survey/templates/_survey_question_page.tpl:24
 msgid "Back"
@@ -126,7 +126,7 @@ msgstr "Pas op"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:36
 msgid "December"
-msgstr "December"
+msgstr "december"
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_button.tpl:35
 msgid "Default"
@@ -202,7 +202,7 @@ msgstr "Onwaar"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:26
 msgid "February"
-msgstr "Februari"
+msgstr "februari"
 
 #: modules/mod_survey/mod_survey.erl:107
 msgid "File upload"
@@ -244,7 +244,7 @@ msgstr "Januari"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:31
 msgid "July"
-msgstr "Juli"
+msgstr "juli"
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_button.tpl:46
 msgid "Jump target"
@@ -252,7 +252,7 @@ msgstr "Doen van sprong"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:30
 msgid "June"
-msgstr "Juni"
+msgstr "juni"
 
 #: modules/mod_survey/mod_survey.erl:96
 msgid "Likert"
@@ -276,7 +276,7 @@ msgstr "Stuur ingevulde surveys naar"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:27
 msgid "March"
-msgstr "Maart"
+msgstr "maart"
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_matching.tpl:15
 msgid "Match which answer fits best."
@@ -288,7 +288,7 @@ msgstr "Voldoet aan"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:29
 msgid "May"
-msgstr "Mei"
+msgstr "mei"
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_category.tpl:50
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_thurstone.tpl:42
@@ -327,11 +327,11 @@ msgstr "Nee"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:35
 msgid "November"
-msgstr "November"
+msgstr "november"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:34
 msgid "October"
-msgstr "Oktober"
+msgstr "oktober"
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_upload.tpl:33
 msgid "Only accept images."
@@ -405,7 +405,7 @@ msgstr "Selecteer uw land"
 
 #: modules/mod_survey/templates/blocks/_block_view_survey_short_answer.tpl:33
 msgid "September"
-msgstr "September"
+msgstr "september"
 
 #: modules/mod_survey/mod_survey.erl:101
 msgid "Short answer"
