mod_survey: change the thank you text, remove the 'Be sure to come back for other surveys' text.
(cherry picked from commit 2aa44cbf54863942ba3b153eba5d2a68a96a5919)

Conflicts:
	modules/mod_survey/translations/tr.po

(cherry picked from commit 50d18d0579f1e0514b751036295703ac4d70efc6)

--- a/modules/mod_survey/translations/fr.po
+++ b/modules/mod_survey/translations/fr.po
@@ -494,7 +494,7 @@ msgstr ""
 
 #: modules/mod_survey/templates/_survey_end.tpl:3
 msgid ""
-"Thank you for filling in our survey. Be sure to come back for other surveys!"
+"Thank you for filling in our survey."
 msgstr ""
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_truefalse.tpl:15
