--- a/modules/mod_survey/translations/es.po
+++ b/modules/mod_survey/translations/es.po
@@ -497,10 +497,9 @@ msgstr "Muchas gracias"
 
 #: modules/mod_survey/templates/_survey_end.tpl:3
 msgid ""
-"Thank you for filling in our survey. Be sure to come back for other surveys!"
+"Thank you for filling in our survey."
 msgstr ""
-"Gracias por haber completado la encuesta. ¡Esperamos que vuelva para las "
-"próximas encuestas!"
+"Gracias por haber completado la encuesta."
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_truefalse.tpl:15
 msgid "The earth is flat."
