--- a/modules/mod_survey/translations/pl.po
+++ b/modules/mod_survey/translations/pl.po
@@ -505,8 +505,8 @@ msgstr "Dziękujemy"
 
 #: modules/mod_survey/templates/_survey_end.tpl:3
 msgid ""
-"Thank you for filling in our survey. Be sure to come back for other surveys!"
-msgstr "Dziękujemy za udział w naszym badaniu. Zajrzyj do nas w przyszłości!"
+"Thank you for filling in our survey."
+msgstr "Dziękujemy za udział w naszym badaniu."
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_truefalse.tpl:15
 msgid "The earth is flat."
