--- a/modules/mod_survey/translations/ru.po
+++ b/modules/mod_survey/translations/ru.po
@@ -502,10 +502,9 @@ msgstr "Спасибо"
 
 #: modules/mod_survey/templates/_survey_end.tpl:3
 msgid ""
-"Thank you for filling in our survey. Be sure to come back for other surveys!"
+"Thank you for filling in our survey."
 msgstr ""
-"Спасибо за заполнение нашей анкеты. Не забудьте вернуться за остальными "
-"анкетами!"
+"Спасибо за заполнение нашей анкеты."
 
 #: modules/mod_survey/templates/blocks/_admin_edit_block_li_survey_truefalse.tpl:15
 msgid "The earth is flat."
