--- a/modules/mod_backup/translations/nl.po
+++ b/modules/mod_backup/translations/nl.po
@@ -104,7 +104,7 @@ msgstr "Hulp over backup &amp; terugzetten"
 #: ./modules/mod_backup/templates/_admin_edit_sidebar.tpl:22 
 msgid ""
 "List and restore an earlier version"
-msgstr "Bekijk eerder versies"
+msgstr "Bekijk eerdere versies"
 
 #: ./modules/mod_backup/templates/admin_backup.tpl:21 
 msgid ""
